--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,5 @@
 ---
-theme :
-  name : the-program
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/the-program/page.html %}
+{% include themes/twitter/page.html %}
