--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,5 @@
 ---
-theme :
-  name : the-program
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/the-program/post.html %}
+{% include themes/twitter/post.html %}
